Closed Bug 231734 Opened 22 years ago Closed 22 years ago

[BEOS]Random crashes in CallMethod

Categories

(Core Graveyard :: GFX: BeOS, defect)

x86
BeOS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sergei_d, Assigned: sergei_d)

Details

(Keywords: crash)

Attachments

(1 file)

Mozilla crashes randomly, complaining in stack crawl about segmentation violation in Bview->::BVindow. Reason - focus messages. If for nsWindow::SetFocus() we have check fro GUI-thread, so GOTFOCUS messages always pass to proper/existing target (i hope), for LOSTFOCUS messages situation is different. Those are generated "automatically" by nsViewBeOS and when BWindow pointer in nsMethodInfo->args reaches CallMethod, originating BWindow with its whole thread may be already gone, so BWindow/Looper message filters gets segment violation when casts uint32 to non existing (BWindow *). Solution - it seems in current situation we don't need that check for mView->BWindow == (BWindow *)info->args[]; So, i will remove that test in ::CallMethod
Assignee: beos → sergei_d
Removing unused args for MethodInfo
Comment on attachment 139585 [details] [diff] [review] Patch (diff -up -r HEAD) review request
Attachment #139585 - Flags: review?(cbiesinger)
Attachment #139585 - Flags: review?(cbiesinger) → review+
Checking in widget/src/beos/nsWindow.cpp; /cvsroot/mozilla/widget/src/beos/nsWindow.cpp,v <-- nsWindow.cpp new revision: 1.76; previous revision: 1.75 done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: