Bug 231734       [BEOS]Random crashes in CallMethod patch by sergei_d@fi.tartu.ee (Sergei Dolgov) r=biesi